--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RunCode</title>
+    <!--styledText-->
   </head>
   <body>
-    `<!--ssr-initial-state-->`
+    <!--ssr-initial-state-->
     <div id="root"><!--ssr-outlet--></div>
     <script type="module" src="./src/main.tsx"></script>
   </body>
