feat: ssr redux+router

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -9,7 +9,7 @@
     <title>RunCode</title>
   </head>
   <body>
-    `<!--ssr-initial-state-->`
+    <!--ssr-initial-state-->
     <div id="root"><!--ssr-outlet--></div>
     <script type="module" src="./src/main.tsx"></script>
   </body>
