--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -6,16 +6,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--CSP-->
     <title>RunCodeStudio</title>
     <!-- Инициализация переменных окружения -->
     <script>
       window.__ENV__ = {
-        API_URL: "<%- API_URL %>",
-        API_VERSION: "<%- API_VERSION %>",
-        API_HOST: "<%- API_HOST %>",
-        API_PORT: "<%- API_PORT %>",
-        API_PATH: "<%- API_PATH %>"
-      };
+        API_URL: '<%- API_URL %>',
+        API_VERSION: '<%- API_VERSION %>',
+        API_HOST: '<%- API_HOST %>',
+        API_PORT: '<%- API_PORT %>',
+        API_PATH: '<%- API_PATH %>',
+      }
     </script>
   </head>
   <body>
